fix: Also use descendant process id when stopping Camel JBang integrations
- Fixes Camel JBang stop operation on Ubuntu environments
- Support wildcard as an argument to stop all Camel JBang integrations