@@ -16,8 +16,11 @@
 
 package org.citrusframework.camel.actions;
 
+import java.util.List;
+
 import org.citrusframework.context.TestContext;
 import org.citrusframework.exceptions.CitrusRuntimeException;
+import org.citrusframework.jbang.ProcessAndOutput;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -45,21 +48,42 @@ public class CamelStopIntegrationAction extends AbstractCamelJBangAction {
     public void doExecute(TestContext context) {
         String name = context.replaceDynamicContentInString(integrationName);
 
-        logger.info("Stopping Camel integration '%s' ...".formatted(name));
+        if (name.equals("*")) {
+            logger.info("Stopping all Camel integrations ...");
 
-        Long pid;
-        if (context.getVariables().containsKey(name + ":pid")) {
-            pid = context.getVariable(name + ":pid", Long.class);
+            camelJBang().camelApp().run("stop");
+
+            logger.info("Stopped all Camel integrations");
         } else {
-            pid = camelJBang().getAll().stream()
-                    .filter(props -> name.equals(props.get("NAME")) && !props.getOrDefault("PID", "").isBlank())
-                    .map(props -> Long.valueOf(props.get("PID"))).findFirst()
-                    .orElseThrow(() -> new CitrusRuntimeException(String.format("Missing process id for Camel integration %s:pid", name)));
+            logger.info("Stopping Camel integration '%s' ...".formatted(name));
+
+            Long pid;
+            if (context.getVariables().containsKey(name + ":pid")) {
+                pid = context.getVariable(name + ":pid", Long.class);
+            } else {
+                pid = camelJBang().getAll().stream()
+                        .filter(props -> name.equals(props.get("NAME")) && !props.getOrDefault("PID", "").isBlank())
+                        .map(props -> Long.valueOf(props.get("PID"))).findFirst()
+                        .orElseThrow(() -> new CitrusRuntimeException(String.format("Missing process id for Camel integration %s:pid", name)));
+            }
+
+            camelJBang().stop(pid);
+
+            if (context.getVariables().containsKey("%s:process:%d".formatted(name, pid))) {
+                // check if process is still alive
+                ProcessAndOutput pao = context.getVariable(name + ":process:" + pid, ProcessAndOutput.class);
+                if (pao.getProcess().isAlive()) {
+                    // Check if there is a descendant process to be stopped
+                    List<Long> descendants = pao.getDescendants();
+                    for (Long descendantPid : descendants) {
+                        camelJBang().stop(descendantPid);
+                        logger.info("Stopped Camel integration '%s' (%s - %s)".formatted(name, pid, descendantPid));
+                    }
+                }
+            }
+
+            logger.info("Stopped Camel integration '%s' (%s)".formatted(name, pid));
         }
-
-        camelJBang().stop(pid);
-
-        logger.info("Stopped Camel integration '%s' (%s)".formatted(name, pid));
     }
 
     public String getIntegrationName() {
@@ -71,7 +95,7 @@ public class CamelStopIntegrationAction extends AbstractCamelJBangAction {
      */
     public static final class Builder extends AbstractCamelJBangAction.Builder<CamelStopIntegrationAction, Builder> {
 
-        private String integrationName = "route";
+        private String integrationName = "*";
 
         /**
          * Stop Camel JBang process for this integration.
